--- a/Onecalendar.Portal/Onecalendar.WebPortal/assets/mobirise/css/mbr-additional.css
+++ b/Onecalendar.Portal/Onecalendar.WebPortal/assets/mobirise/css/mbr-additional.css
@@ -14,6 +14,7 @@ textarea,
 .mbr-footer .mbr-contacts li {
   font-family: 'Raleway', sans-serif;
 }
+.imgsize {}
 .staticmenucolor{background-color:blue}
 .btn,
 .alert,
